--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 matplotlib>3.6.0
-numpy>=1.16
+numpy>=1.20
 scipy>=1.5
-netCDF4
+netCDF4>1.5.8
 pyyaml>=5.1
-Shapely
 scikit-image>=0.19
 xarray
 pooch
