run doctests in cube.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,7 @@ relative_files = true
 [tool.pytest.ini_options]
 minversion = "6.0"
 testpaths = [
+    "deltametrics/cube.py",
     "deltametrics/mobility.py",
     "deltametrics/plot.py",
     "deltametrics/utils.py",
