--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,7 @@ relative_files = true
 [tool.pytest.ini_options]
 minversion = "6.0"
 testpaths = [
+    "deltametrics/mobility.py",
     "tests",
 ]
 norecursedirs = [
