--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,6 +101,7 @@ testpaths = [
     "deltametrics/mobility.py",
     "deltametrics/plan.py",
     "deltametrics/plot.py",
+    "deltametrics/section.py",
     "deltametrics/strat.py",
     "deltametrics/utils.py",
     "tests",
