--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,7 @@ relative_files = true
 minversion = "6.0"
 testpaths = [
     "deltametrics/mobility.py",
+    "deltametrics/utils.py",
     "tests",
 ]
 norecursedirs = [
