--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,11 @@
 [flake8]
 exclude = docs/source/pyplots/guides, build, .nox
-ignore = C901, E203, E266, E501, E704, W503, B905
+ignore =
+    C901, E203, E501, W503,
+    # These mostly deal with whitespace and will be found and fixed with black
+    E121, E125, E126, E127, E226, E241, E261, E275, E302, E305,
+    B024, B950,
+    W504
 max-line-length = 88
 max-complexity = 18
 select = B,C,E,F,W,T4,B9
