--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
   hooks:
   - id: flake8
     additional_dependencies:
-    # - flake8-bugbear
+    - flake8-bugbear
     - flake8-comprehensions
     - flake8-simplify
     exclude: ^docs/source/pyplots/guides/.*$
