--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,8 +2,7 @@
 name = "DeltaMetrics"
 requires-python = ">=3.11"
 description = "Tools for manipulating sedimentologic data cubes."
-keywords = [
-]
+keywords = []
 authors = [
     { name = "Andrew Moodie", email = "amoodie@tamu.edu" },
 ]
@@ -18,14 +17,13 @@ classifiers = [
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: Implementation :: CPython",
     "Topic :: Scientific/Engineering :: Hydrology",
     "Topic :: Scientific/Engineering :: Physics",
 ]
 dependencies = [
-    "h5py",
     "h5netcdf",
+    "h5py",
     "importlib-resources; python_version < '3.12'",
     "matplotlib",
     "netCDF4",
@@ -50,27 +48,6 @@ documentation = "https://deltarcm.github.io/deltametrics"
 homepage = "https://github.com/DeltaRCM/DeltaMetrics"
 repository = "https://github.com/DeltaRCM/DeltaMetrics"
 
-[build-system]
-requires = [
-    "setuptools >=61",
-]
-build-backend = "setuptools.build_meta"
-
-[tool.setuptools.dynamic.readme]
-file = "README.rst"
-content-type = "text/x-rst"
-
-[tool.setuptools.dynamic.version]
-attr = "deltametrics._version.__version__"
-
-[tool.setuptools]
-include-package-data = true
-
-[tool.setuptools.package-data]
-deltametrics = [
-    "sample_data/registry.txt",
-]
-
 [project.optional-dependencies]
 docs = [
     "pyvista",
@@ -80,6 +57,27 @@ testing = [
     "coveralls",
     "pytest",
     "pytest-cov",
+]
+
+[build-system]
+requires = [
+    "setuptools >=61",
+]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+include-package-data = true
+
+[tool.setuptools.dynamic.readme]
+file = "README.rst"
+content-type = "text/x-rst"
+
+[tool.setuptools.dynamic.version]
+attr = "deltametrics._version.__version__"
+
+[tool.setuptools.package-data]
+deltametrics = [
+    "sample_data/registry.txt",
 ]
 
 [tool.setuptools.packages.find]
@@ -114,7 +112,7 @@ addopts = [
     "-vvv",
 ]
 doctest_optionflags = [
-  "NORMALIZE_WHITESPACE",
-  "IGNORE_EXCEPTION_DETAIL",
-  "ELLIPSIS",
+    "NORMALIZE_WHITESPACE",
+    "IGNORE_EXCEPTION_DETAIL",
+    "ELLIPSIS",
 ]
