--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 exclude = docs/source/pyplots/guides, build, .nox
-ignore =
+extend-ignore =
     C901, E203, E501, W503,
     # These mostly deal with whitespace and will be found and fixed with black
     E121, E125, E126, E127, E226, E241, E261, E275, E302, E305,
@@ -8,4 +8,3 @@ ignore =
     W504
 max-line-length = 88
 max-complexity = 18
-select = B,C,E,F,W,T4,B9
