remove unnecessary flake8 exclusions in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,5 @@
 [flake8]
 exclude = docs/source/pyplots/guides, build, .nox
-extend-ignore =
-    C901, E203, E501, W503,
-    # These mostly deal with whitespace and will be found and fixed with black
-    E121, E125, E126, E127, E226, E241, E261, E275, E302, E305,
-    B024, B950,
-    W504
+extend-ignore = B024, C901, E203
 max-line-length = 88
-max-complexity = 18
+max-complexity = 15
