--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -9,5 +9,5 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Welcome to DeltaMetrics, thanks for posting your first issue! Please describe your issue as specifically as possible so that we can better help troubleshoot or resolve the problem.'
-        pr-message: 'Thanks for opening a pull request and contributing to the DeltaMetrics project!'
+        issue-message: 'Welcome to SandPlover, thanks for posting your first issue! Please describe your issue as specifically as possible so that we can better help troubleshoot or resolve the problem.'
+        pr-message: 'Thanks for opening a pull request and contributing to the SandPlover project!'
