--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,24 +9,16 @@ on:
 
 jobs:
   deploy:
-
+    name: Deploy to PyPI
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - name: Publish
+      uses: pypa/gh-action-pypi-publish@release/v1
       with:
-        python-version: '3.10'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine
-        pip install -r requirements.txt
-    - name: Build and publish
-      env:
-        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      run: |
-        python setup.py sdist bdist_wheel
-        twine upload dist/*
+        repository-url: https://upload.pypi.org/legacy/
+        skip-existing: true
+        print-hash: true
+        verify-metadata: false
