--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,16 @@ jobs:
       id-token: write
 
     steps:
+    - uses: actions/checkout@v4
+    - name: Use Python 3.13
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.13"
+    - name: Build
+      shell: bash
+      run: |
+        pip install nox
+        nox -s build
     - name: Publish
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
